# lofi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  derivation.nix  flake.nix
.github/workflows/: liblofi-check-and-lint.yaml  lofi-aarch64.yml  lofi-check-and-lint.yaml  lofi-rustfmt.yaml  lofi-x86_64.yml
src/: correlate.rs  filter.rs  gps.rs  lib.rs  main.rs  region_meta.rs  stops.rs  structs.rs  types.rs
src/crayon/: mod.rs  overpass_extractor.rs  run_analyser.rs
