[package]
name = "lofi"
version = "0.3.1"
edition = "2021"

[lib]
name = "lofi"
path = "src/lib.rs"

[features]
default = [ "correlate" ]
correlate = [
    "tlms/locations",
    "tlms/telegrams",
    "uuid"
]
filter = [
    "tlms/measurements",
    "tlms/telegrams",
]

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = {version = "1.2", features = ["serde", "v4"], optional = true}
log = "0.4"
stderrlog = "0.5"
