[package]
name = "lofi"
version = "0.3.1"
edition = "2021"

[lib]
name = "lofi"
path = "src/lib.rs"

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", features = [ "locations", "telegrams" ] }
serde_json = { version = "1.0" }
uuid = {version = "1.2", features = ["serde", "v4"] }
